modified button and some functions

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="clocks-arrow arr59"></div>
             <div class="clocks-arrow arr60 active"></div>
         </div>
-        <button class="btn-start">Start</button>
+        <button class="btn-start">start</button>
     </div>
   
 
