fixed many things

--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
     <div class="clocks-container">
         <h2 class="clocks-title">stopwatch</h2>
         <div class="clocks">
-            <div class="stopwatch">
-                <p class="stopW"><span class="stop-controls hours">0 </span><br>ЧАС</p>
-                <p class="stopW"><span class="stop-controls minutes">0 </span><br>МИН</p>
-                <p class="stopW"><span class="stop-controls seconds">0 </span><br>СЕК</p>
-            </div>
+            <ul class="stopwatch">
+                <li class="stopW"><span class="stop-controls hours">0</span>ЧАС</li>
+                <li class="stopW"><span class="stop-controls minutes">0</span>МИН</li>
+                <li class="stopW"><span class="stop-controls seconds">0</span>СЕК</li>
+                <li class="stopW"><span class="stop-controls mlseconds">0</span>МЛС</li>
+            </ul>
             <div class="clocks-arrow arr1"></div>
             <div class="clocks-arrow arr2"></div>
             <div class="clocks-arrow arr3"></div>
